--- a/css/style.css
+++ b/css/style.css
@@ -16,24 +16,23 @@ header {
 
 
 }
-
+.width{
+    width: 70%;
+}
 .main_container {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    width: 70%;
 }
-
+main{
+    justify-content: center;
+}
+.center_flex{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-wrap: wrap;
+}
 .mt_20 {
     margin-top: 20px;
-
-}
-
-div_foto {
-    display: flex;
-
-}
-
-mr_0 {
-    margin: 0px;
 }
