--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,10 @@ header {
     justify-content: space-between;
     align-content: center;
 }
-
+.gap_f_10 {
+   gap: 10px; 
+     
+}
 
 .center_flex{
     display: flex;
@@ -39,5 +42,8 @@ header {
 
 .mt_20 {
     margin-top: 20px;
+}
+.border {
+    border: 1px solid rgb(200, 196, 196);
 }
 
